--- a/scripts/roles/pm/defaults/main.yml
+++ b/scripts/roles/pm/defaults/main.yml
@@ -13,4 +13,4 @@ pm_mongodb_hostname: ""
 pm_ca_crt_path: ""
 pm_wildcard_key_path: ""
 pm_wildcard_crt_path: ""
-pm_output_namespace: "apollo-one-shot"
+pm_output_namespace: "nt-cp4ba-demo"
