--- a/scripts/roles/config/tasks/external-ldap.yml
+++ b/scripts/roles/config/tasks/external-ldap.yml
@@ -4,8 +4,8 @@
     host: "{{ ocp_api_endpoint | default(omit) }}"
     api_version: v1
     kind: Secret
-    namespace: apollo-one-shot
-    name: apollo-one-shot
+    namespace: nt-cp4ba-demo
+    name: nt-cp4ba-demo
   register: external_ldap_secret
   retries: 40
   delay: 15
