--- a/scripts/roles/cp4ba/defaults/main.yml
+++ b/scripts/roles/cp4ba/defaults/main.yml
@@ -42,4 +42,4 @@ cp4ba_external_share_google: ""
 cp4ba_google_client_id: ""
 cp4ba_google_client_secret: ""
 cp4ba_deployment_platform: ""
-cp4ba_output_namespace: "apollo-one-shot"
+cp4ba_output_namespace: "nt-cp4ba-demo"
