--- a/scripts/roles/global_ca/tasks/install.yml
+++ b/scripts/roles/global_ca/tasks/install.yml
@@ -10,7 +10,7 @@
     host: "{{ global_ca_k8s_host | default(omit) }}"
     api_version: v1
     kind: Secret
-    name: apollo-one-shot
+    name: nt-cp4ba-demo
     namespace: "{{ global_ca_output_namespace }}"
   register: global_ca_secret
 
@@ -113,7 +113,7 @@
     host: "{{ global_ca_k8s_host | default(omit) }}"
     api_version: v1
     kind: Secret
-    name: apollo-one-shot
+    name: nt-cp4ba-demo
     namespace: "{{ global_ca_output_namespace }}"
     patch:
       - op: add
