--- a/scripts/roles/rpa/defaults/main.yml
+++ b/scripts/roles/rpa/defaults/main.yml
@@ -10,4 +10,4 @@ rpa_storage_class_name: ""
 rpa_universal_password: ""
 rpa_mssql_hostname: ""
 rpa_mail_hostname: ""
-rpa_output_namespace: "apollo-one-shot"
+rpa_output_namespace: "nt-cp4ba-demo"
